# new-active-sterile

./: CMakeLists.txt  derivs.c  derivs.h  diffeqs.c  diffeqs.h  gstar.csv  main.c  sn_computations.c  sn_computations.h  sn_cross_sections.c  sn_cross_sections.h  sn_ics.c  sn_ics.h  sn_math.c  sn_math.h  sundials_solve.c  sundials_solve.h  tests.c  tests.h
